kubernetes/core.bak/argoworkflows/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argoworkflows-server
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "100"
    traefik.ingress.kubernetes.io/websocket: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argoworkflows.bhamm-lab.com`)
      middlewares:
        - name: default-headers
      services:
        - name: argoworkflows-argo-workflows-server
          port: 2746
  tls:
    secretName: bhamm-lab-tls
